cmake_minimum_required(VERSION 4.0)
project(intro)

# set c++ to standard 20
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(basic src/001_basic/main.cpp)
add_executable(basic_assignment src/001_basic/assignment.cpp)
add_executable(number_system src/002_variables_and_data/number_system.cpp)
add_executable(decimal_integers src/002_variables_and_data/decimal_integers.cpp)
add_executable(integer_modifiers src/002_variables_and_data/integer_modifiers.cpp)
add_executable(fractions src/002_variables_and_data/fractions.cpp)
add_executable(characters_and_text src/002_variables_and_data/characters_and_text.cpp)
add_executable(auto_type_assignments src/002_variables_and_data/auto_type_assignments.cpp)
add_executable(output_formatting src/002_variables_and_data/output_formatting.cpp)
add_executable(numeric_limits src/002_variables_and_data/numeric_limits.cpp)
add_executable(math_functions src/002_variables_and_data/math_functions.cpp)
add_executable(hexagon_area src/002_variables_and_data/hexagon_area.cpp)
add_executable(weird_primitive_types src/002_variables_and_data/weird_primitive_types.cpp)